DuPont DevSB/src/objects/ccrz__E_AddressBook__c.object
<CustomObject>
    <description>Represents a mapping of entity to address to handle address book functionality.</description>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <description>Account that owns the address book entry</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Address Books</relationshipLabel>
        <relationshipName>E_AddressBooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressBookId__c</fullName>
        <description>External Id for Address Book</description>
        <externalId>true</externalId>
        <label>Address Book Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__AddressType__c</fullName>
        <description>Indicates which type of address correponds to the address book entry</description>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to determine whether or not this address book entry is a default</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__E_ContactAddress__c</fullName>
        <label>CC Contact Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Address Books</relationshipLabel>
        <relationshipName>E_Address_Books</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Address_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Address Book</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Address Book Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Address Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>